--- a/APICatalogo/APICatalogo/appsettings.json
+++ b/APICatalogo/APICatalogo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;DataBase=CatalogoDB;Uid=sa;Pwd=cidadao"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
